[package]
name = "krakensync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.1", features = ["serde"] }
anyhow = "1.0.66"
async-stream = "0.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
bytes = { version = "1.2.1", features = ["serde"] }
cid = "0.8.6"
clap = { version = "4.0.23", features = ["derive"] }
futures = "0.3.25"
hex = "0.4.3"
libipld = { version = "0.14.0", features = ["serde-codec"] }
multihash = "0.16.3"
parking_lot = "0.12.1"
quinn = "0.9.0"
rcgen = "0.10.0"
rustls = "0.20.7"
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
