[package]
name = "krakensync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.1", features = ["serde"] }
anyhow = "1.0.66"
async-stream = "0.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
bytes = { version = "1.2.1", features = ["serde"] }
cid = "0.9.0"
clap = { version = "4.0.23", features = ["derive"] }
derive_more = "0.99.17"
futures = "0.3.25"
hex = "0.4.3"
iroh-car = "0.1.3"
libipld = { version = "0.15.0", features = ["serde-codec"] }
multihash = "0.17.0"
parking_lot = "0.12.1"
quic-rpc = { version = "0.2.2", features = ["http2"], default-features = false }
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
